--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dev_dependencies:
   riverpod_lint: ^3.0.0
   build_runner: ^2.4.6
 
+  firebase_auth_platform_interface: any
 flutter:
 
   uses-material-design: true
