--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   build_runner: ^2.4.6
 
   firebase_auth_platform_interface: any
+  cloud_firestore_platform_interface: any
 flutter:
 
   uses-material-design: true
