--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   mockito: ^5.5.0
   equatable: ^2.0.7
   go_router: ^16.2.4
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
