--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   equatable: ^2.0.7
   go_router: ^16.2.4
   google_sign_in: ^7.2.0
+  flutter_signin_button: ^2.1.1
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -34,5 +36,38 @@ dev_dependencies:
 
   firebase_auth_platform_interface: any
 flutter:
-
   uses-material-design: true
+
+  assets:
+    - .env
+    - assets/images/
+
+
+fonts:
+  - family: Roboto
+    fonts:
+      - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/Roboto/Roboto-Italic.ttf
+        weight: 400
+        style: italic
+      - asset: assets/fonts/Roboto/Roboto-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/Roboto/Roboto-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/Roboto/Roboto-SemiBold.ttf
+        weight: 600
+
+  - family: OpenSans
+    fonts:
+      - asset: assets/fonts/OpenSans/OpenSans-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/OpenSans/OpenSans-Italic.ttf
+        weight: 400
+        style: italic
+      - asset: assets/fonts/OpenSans/OpenSans-Bold.ttf
+        weight: 700
+      - asset: assets/fonts/OpenSans/OpenSans-Medium.ttf
+        weight: 500
+      - asset: assets/fonts/OpenSans/OpenSans-SemiBold.ttf
+        weight: 600
